update i18n + sql scripts

--- a/mamikoWS/src/main/resources/application.properties
+++ b/mamikoWS/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/mamiko
-spring.datasource.username=mamiko
-spring.datasource.password=mamiko-2019
+spring.datasource.url=jdbc:postgresql://localhost:5432/benjaminfranklin
+spring.datasource.username=benjamin_franklin
+spring.datasource.password=benjamin_franklin_2019
 
 administrator.mail=shi@mail.com
