--- a/mamikoFrontEnd/package.json
+++ b/mamikoFrontEnd/package.json
@@ -15,8 +15,6 @@
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
     "@angular/animations": "6.0.7",
     "@angular/common": "6.0.7",
     "@angular/compiler": "6.0.7",
@@ -27,13 +25,15 @@
     "@angular/platform-browser": "6.0.7",
     "@angular/platform-browser-dynamic": "6.0.7",
     "@angular/router": "6.0.7",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "2.5.4",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/schematics": "0.0.34",
-    "@angular/cdk": "6.4.7",
+    "@angular/cdk": "^6.4.7",
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/platform-server": "6.0.7",
